Add warning for string deduplication with genertional zgc.